/*
 * Copyright (c) 2023 Elide Ventures, LLC.
 *
 * Licensed under the MIT license (the "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   https://opensource.org/license/mit/
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under the License.
 */

syntax = "proto3";

package elide.grpctest;

option java_package = "elide.grpctest";


// Sample service interface.
service SampleService {
  // Method that always times out.
  rpc MethodThatTakesTooLong(SampleRequest) returns (SampleResponse);

  // Method that throws a given error.
  rpc MethodThatErrors(StatusRequest) returns (SampleResponse);

  // Method that affixes response trailers.
  rpc MethodWithTrailers(SampleRequest) returns (SampleResponse);

  // Method that throws a non-gRPC fatal error.
  rpc MethodWithFatalError(SampleRequest) returns (SampleResponse);

  // Method that calls `onNext` multiple times.
  rpc MethodWithMultipleResponses(SampleRequest) returns (SampleResponse);

  // Method that calls `onNext` after `onCompleted`, which is illegal.
  rpc MethodWithNextAfterClose(SampleRequest) returns (SampleResponse);

  // Method that calls `onNext` after `onError`, which is illegal.
  rpc MethodWithNextAfterError(SampleRequest) returns (SampleResponse);
}

// Sample request payload.
message SampleRequest {
  // Rendered message.
  string name = 1;
}

// Sample response payload.
message SampleResponse {
  // Rendered message.
  string message = 1;
}

// Request to return an error of a given status code.
message StatusRequest {
  // Status code for the error to throw.
  int32 statusCode = 1;
}
